# AE-MaxFlow

./: .gitignore  CMakeLists.txt  Cpp_project.7z  Doxyfile  READ.ME  README.md  aggregate_and_plot copy.py  aggregate_and_plot.py  graphgenerator.py  grid_n10_d5_seed0.max  grid_n500_d5_seed0.max  main.cpp  python_to_cpp.drawio
.continue/: config.json
benchmarkBVZ/: cs_results.csv  pr_results.csv
benchmarkKZ2/: cs_results.csv  pr_results.csv
benchmarkreali/BVZ-tsukuba/: BVZ-tsukuba0.sol
benchmarkreali/KZ2-venus/: KZ2-venus0.sol  KZ2-venus1.sol  KZ2-venus10.sol  KZ2-venus11.sol  KZ2-venus12.sol  KZ2-venus13.sol  KZ2-venus14.sol  KZ2-venus15.sol  KZ2-venus16.sol  KZ2-venus17.sol  KZ2-venus18.sol  KZ2-venus19.sol  KZ2-venus2.sol  KZ2-venus20.sol  KZ2-venus21.sol  KZ2-venus3.sol  KZ2-venus4.sol  KZ2-venus5.sol  KZ2-venus6.sol  KZ2-venus7.sol  KZ2-venus8.sol  KZ2-venus9.sol
benchmarksingoli/: al_results.csv  cs_results.csv  pr_results.csv
configs/: config.toml  configmain.toml
documentazione/: doxygen.txt
documentazione/html/: _form0_dark_tmp.ps  _form0_tmp.ps  _form1_dark_tmp.ps  _form1_tmp.ps  _form2_dark_tmp.ps  _form2_tmp.ps  almost__linear__time_8cpp.html  almost__linear__time_8cpp__incl.dot  almost__linear__time_8hpp.html  almost__linear__time_8hpp.js  almost__linear__time_8hpp__dep__incl.dot  almost__linear__time_8hpp__incl.dot  almost__linear__time_8hpp_source.html  annotated.html  annotated_dup.js  capacity_8cpp.html  capacity_8cpp.js  capacity_8cpp__incl.dot  capacity_8cpp_a290d1c9795f0bcbd8a1fd1beead9a250_icgraph.dot  capacity_8cpp_a7c37d8ffc8e501339213bb1f40047424_icgraph.dot  capacity_8cpp_ad0f3fd0d6291236a67c018819464d57d_cgraph.dot  capacity_8cpp_ad0f3fd0d6291236a67c018819464d57d_icgraph.dot  capacity_8hpp.html  capacity_8hpp.js  capacity_8hpp__dep__incl.dot  capacity_8hpp__incl.dot  capacity_8hpp_a7c37d8ffc8e501339213bb1f40047424_icgraph.dot  capacity_8hpp_ad0f3fd0d6291236a67c018819464d57d_cgraph.dot  capacity_8hpp_ad0f3fd0d6291236a67c018819464d57d_icgraph.dot  capacity_8hpp_source.html  capacity__scaling_8cpp.html  capacity__scaling_8cpp__incl.dot  capacity__scaling_8hpp.html  capacity__scaling_8hpp.js  capacity__scaling_8hpp__dep__incl.dot  capacity__scaling_8hpp__incl.dot  capacity__scaling_8hpp_source.html  class_almost_linear_time-members.html  class_almost_linear_time.html  class_almost_linear_time.js  (+181 more)
src/: main.cpp
(+84 files in other folders)
